[Blacklist] Fix blacklist box being visible on favorites page

--- a/app/javascript/src/styles/common/blacklists.scss
+++ b/app/javascript/src/styles/common/blacklists.scss
@@ -65,7 +65,7 @@
 }
 
 // Completely hide the blacklisted posts on these pages only
-#c-posts #a-index, #c-explore-posts {
+#c-posts #a-index, #c-explore-posts, #c-favorites {
   .post-preview.blacklisted {
     display: none;
   }
